// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded with kql filter to force metrics-based UI has the correct throughput 1`] = `
Array [
  Object {
    "x": 1627973400000,
    "y": 4,
  },
  Object {
    "x": 1627973460000,
    "y": 2,
  },
  Object {
    "x": 1627973520000,
    "y": 3,
  },
  Object {
    "x": 1627973580000,
    "y": 11,
  },
  Object {
    "x": 1627973640000,
    "y": 4,
  },
  Object {
    "x": 1627973700000,
    "y": 6,
  },
  Object {
    "x": 1627973760000,
    "y": 6,
  },
  Object {
    "x": 1627973820000,
    "y": 11,
  },
  Object {
    "x": 1627973880000,
    "y": 10,
  },
  Object {
    "x": 1627973940000,
    "y": 10,
  },
  Object {
    "x": 1627974000000,
    "y": 12,
  },
  Object {
    "x": 1627974060000,
    "y": 13,
  },
  Object {
    "x": 1627974120000,
    "y": 8,
  },
  Object {
    "x": 1627974180000,
    "y": 10,
  },
  Object {
    "x": 1627974240000,
    "y": 13,
  },
  Object {
    "x": 1627974300000,
    "y": 9,
  },
  Object {
    "x": 1627974360000,
    "y": 0,
  },
  Object {
    "x": 1627974420000,
    "y": 4,
  },
  Object {
    "x": 1627974480000,
    "y": 5,
  },
  Object {
    "x": 1627974540000,
    "y": 6,
  },
  Object {
    "x": 1627974600000,
    "y": 8,
  },
  Object {
    "x": 1627974660000,
    "y": 5,
  },
  Object {
    "x": 1627974720000,
    "y": 5,
  },
  Object {
    "x": 1627974780000,
    "y": 7,
  },
  Object {
    "x": 1627974840000,
    "y": 2,
  },
  Object {
    "x": 1627974900000,
    "y": 15,
  },
  Object {
    "x": 1627974960000,
    "y": 3,
  },
  Object {
    "x": 1627975020000,
    "y": 8,
  },
  Object {
    "x": 1627975080000,
    "y": 13,
  },
  Object {
    "x": 1627975140000,
    "y": 11,
  },
  Object {
    "x": 1627975200000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded with kql filter to force transaction-based UI calculate throughput per minute because of time range has the correct throughput 1`] = `
Array [
  Object {
    "x": 1627973400000,
    "y": 2,
  },
  Object {
    "x": 1627973430000,
    "y": 2,
  },
  Object {
    "x": 1627973460000,
    "y": 2,
  },
  Object {
    "x": 1627973490000,
    "y": 6,
  },
  Object {
    "x": 1627973520000,
    "y": 2,
  },
  Object {
    "x": 1627973550000,
    "y": 16,
  },
  Object {
    "x": 1627973580000,
    "y": 8,
  },
  Object {
    "x": 1627973610000,
    "y": 2,
  },
  Object {
    "x": 1627973640000,
    "y": 2,
  },
  Object {
    "x": 1627973670000,
    "y": 4,
  },
  Object {
    "x": 1627973700000,
    "y": 8,
  },
  Object {
    "x": 1627973730000,
    "y": 6,
  },
  Object {
    "x": 1627973760000,
    "y": 12,
  },
  Object {
    "x": 1627973790000,
    "y": 8,
  },
  Object {
    "x": 1627973820000,
    "y": 10,
  },
  Object {
    "x": 1627973850000,
    "y": 6,
  },
  Object {
    "x": 1627973880000,
    "y": 16,
  },
  Object {
    "x": 1627973910000,
    "y": 10,
  },
  Object {
    "x": 1627973940000,
    "y": 6,
  },
  Object {
    "x": 1627973970000,
    "y": 12,
  },
  Object {
    "x": 1627974000000,
    "y": 16,
  },
  Object {
    "x": 1627974030000,
    "y": 16,
  },
  Object {
    "x": 1627974060000,
    "y": 8,
  },
  Object {
    "x": 1627974090000,
    "y": 4,
  },
  Object {
    "x": 1627974120000,
    "y": 16,
  },
  Object {
    "x": 1627974150000,
    "y": 4,
  },
  Object {
    "x": 1627974180000,
    "y": 14,
  },
  Object {
    "x": 1627974210000,
    "y": 10,
  },
  Object {
    "x": 1627974240000,
    "y": 14,
  },
  Object {
    "x": 1627974270000,
    "y": 6,
  },
  Object {
    "x": 1627974300000,
    "y": 10,
  },
  Object {
    "x": 1627974330000,
    "y": 0,
  },
  Object {
    "x": 1627974360000,
    "y": 0,
  },
  Object {
    "x": 1627974390000,
    "y": 4,
  },
  Object {
    "x": 1627974420000,
    "y": 6,
  },
  Object {
    "x": 1627974450000,
    "y": 6,
  },
  Object {
    "x": 1627974480000,
    "y": 4,
  },
  Object {
    "x": 1627974510000,
    "y": 6,
  },
  Object {
    "x": 1627974540000,
    "y": 6,
  },
  Object {
    "x": 1627974570000,
    "y": 6,
  },
  Object {
    "x": 1627974600000,
    "y": 10,
  },
  Object {
    "x": 1627974630000,
    "y": 2,
  },
  Object {
    "x": 1627974660000,
    "y": 6,
  },
  Object {
    "x": 1627974690000,
    "y": 4,
  },
  Object {
    "x": 1627974720000,
    "y": 8,
  },
  Object {
    "x": 1627974750000,
    "y": 10,
  },
  Object {
    "x": 1627974780000,
    "y": 4,
  },
  Object {
    "x": 1627974810000,
    "y": 2,
  },
  Object {
    "x": 1627974840000,
    "y": 6,
  },
  Object {
    "x": 1627974870000,
    "y": 6,
  },
  Object {
    "x": 1627974900000,
    "y": 18,
  },
  Object {
    "x": 1627974930000,
    "y": 4,
  },
  Object {
    "x": 1627974960000,
    "y": 2,
  },
  Object {
    "x": 1627974990000,
    "y": 8,
  },
  Object {
    "x": 1627975020000,
    "y": 8,
  },
  Object {
    "x": 1627975050000,
    "y": 12,
  },
  Object {
    "x": 1627975080000,
    "y": 18,
  },
  Object {
    "x": 1627975110000,
    "y": 10,
  },
  Object {
    "x": 1627975140000,
    "y": 8,
  },
  Object {
    "x": 1627975170000,
    "y": 12,
  },
  Object {
    "x": 1627975200000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded with time comparison has the correct throughput in tpm 1`] = `
Object {
  "currentPeriod": Array [
    Object {
      "x": 1627974310000,
      "y": 0,
    },
    Object {
      "x": 1627974320000,
      "y": 0,
    },
    Object {
      "x": 1627974330000,
      "y": 0,
    },
    Object {
      "x": 1627974340000,
      "y": 0,
    },
    Object {
      "x": 1627974350000,
      "y": 0,
    },
    Object {
      "x": 1627974360000,
      "y": 0,
    },
    Object {
      "x": 1627974370000,
      "y": 0,
    },
    Object {
      "x": 1627974380000,
      "y": 0,
    },
    Object {
      "x": 1627974390000,
      "y": 0,
    },
    Object {
      "x": 1627974400000,
      "y": 0,
    },
    Object {
      "x": 1627974410000,
      "y": 12,
    },
    Object {
      "x": 1627974420000,
      "y": 12,
    },
    Object {
      "x": 1627974430000,
      "y": 0,
    },
    Object {
      "x": 1627974440000,
      "y": 6,
    },
    Object {
      "x": 1627974450000,
      "y": 12,
    },
    Object {
      "x": 1627974460000,
      "y": 6,
    },
    Object {
      "x": 1627974470000,
      "y": 0,
    },
    Object {
      "x": 1627974480000,
      "y": 6,
    },
    Object {
      "x": 1627974490000,
      "y": 0,
    },
    Object {
      "x": 1627974500000,
      "y": 6,
    },
    Object {
      "x": 1627974510000,
      "y": 0,
    },
    Object {
      "x": 1627974520000,
      "y": 18,
    },
    Object {
      "x": 1627974530000,
      "y": 0,
    },
    Object {
      "x": 1627974540000,
      "y": 12,
    },
    Object {
      "x": 1627974550000,
      "y": 6,
    },
    Object {
      "x": 1627974560000,
      "y": 0,
    },
    Object {
      "x": 1627974570000,
      "y": 18,
    },
    Object {
      "x": 1627974580000,
      "y": 0,
    },
    Object {
      "x": 1627974590000,
      "y": 0,
    },
    Object {
      "x": 1627974600000,
      "y": 0,
    },
    Object {
      "x": 1627974610000,
      "y": 18,
    },
    Object {
      "x": 1627974620000,
      "y": 12,
    },
    Object {
      "x": 1627974630000,
      "y": 0,
    },
    Object {
      "x": 1627974640000,
      "y": 0,
    },
    Object {
      "x": 1627974650000,
      "y": 6,
    },
    Object {
      "x": 1627974660000,
      "y": 6,
    },
    Object {
      "x": 1627974670000,
      "y": 12,
    },
    Object {
      "x": 1627974680000,
      "y": 0,
    },
    Object {
      "x": 1627974690000,
      "y": 6,
    },
    Object {
      "x": 1627974700000,
      "y": 0,
    },
    Object {
      "x": 1627974710000,
      "y": 6,
    },
    Object {
      "x": 1627974720000,
      "y": 0,
    },
    Object {
      "x": 1627974730000,
      "y": 18,
    },
    Object {
      "x": 1627974740000,
      "y": 6,
    },
    Object {
      "x": 1627974750000,
      "y": 18,
    },
    Object {
      "x": 1627974760000,
      "y": 0,
    },
    Object {
      "x": 1627974770000,
      "y": 12,
    },
    Object {
      "x": 1627974780000,
      "y": 6,
    },
    Object {
      "x": 1627974790000,
      "y": 6,
    },
    Object {
      "x": 1627974800000,
      "y": 0,
    },
    Object {
      "x": 1627974810000,
      "y": 6,
    },
    Object {
      "x": 1627974820000,
      "y": 0,
    },
    Object {
      "x": 1627974830000,
      "y": 0,
    },
    Object {
      "x": 1627974840000,
      "y": 0,
    },
    Object {
      "x": 1627974850000,
      "y": 12,
    },
    Object {
      "x": 1627974860000,
      "y": 6,
    },
    Object {
      "x": 1627974870000,
      "y": 12,
    },
    Object {
      "x": 1627974880000,
      "y": 0,
    },
    Object {
      "x": 1627974890000,
      "y": 6,
    },
    Object {
      "x": 1627974900000,
      "y": 30,
    },
    Object {
      "x": 1627974910000,
      "y": 24,
    },
    Object {
      "x": 1627974920000,
      "y": 0,
    },
    Object {
      "x": 1627974930000,
      "y": 12,
    },
    Object {
      "x": 1627974940000,
      "y": 0,
    },
    Object {
      "x": 1627974950000,
      "y": 0,
    },
    Object {
      "x": 1627974960000,
      "y": 0,
    },
    Object {
      "x": 1627974970000,
      "y": 6,
    },
    Object {
      "x": 1627974980000,
      "y": 0,
    },
    Object {
      "x": 1627974990000,
      "y": 18,
    },
    Object {
      "x": 1627975000000,
      "y": 0,
    },
    Object {
      "x": 1627975010000,
      "y": 6,
    },
    Object {
      "x": 1627975020000,
      "y": 18,
    },
    Object {
      "x": 1627975030000,
      "y": 6,
    },
    Object {
      "x": 1627975040000,
      "y": 0,
    },
    Object {
      "x": 1627975050000,
      "y": 6,
    },
    Object {
      "x": 1627975060000,
      "y": 6,
    },
    Object {
      "x": 1627975070000,
      "y": 24,
    },
    Object {
      "x": 1627975080000,
      "y": 18,
    },
    Object {
      "x": 1627975090000,
      "y": 18,
    },
    Object {
      "x": 1627975100000,
      "y": 18,
    },
    Object {
      "x": 1627975110000,
      "y": 18,
    },
    Object {
      "x": 1627975120000,
      "y": 6,
    },
    Object {
      "x": 1627975130000,
      "y": 6,
    },
    Object {
      "x": 1627975140000,
      "y": 6,
    },
    Object {
      "x": 1627975150000,
      "y": 18,
    },
    Object {
      "x": 1627975160000,
      "y": 0,
    },
    Object {
      "x": 1627975170000,
      "y": 6,
    },
    Object {
      "x": 1627975180000,
      "y": 24,
    },
    Object {
      "x": 1627975190000,
      "y": 6,
    },
    Object {
      "x": 1627975200000,
      "y": 0,
    },
    Object {
      "x": 1627975210000,
      "y": 0,
    },
  ],
  "previousPeriod": Array [
    Object {
      "x": 1627974310000,
      "y": 0,
    },
    Object {
      "x": 1627974320000,
      "y": 6,
    },
    Object {
      "x": 1627974330000,
      "y": 0,
    },
    Object {
      "x": 1627974340000,
      "y": 0,
    },
    Object {
      "x": 1627974350000,
      "y": 6,
    },
    Object {
      "x": 1627974360000,
      "y": 6,
    },
    Object {
      "x": 1627974370000,
      "y": 0,
    },
    Object {
      "x": 1627974380000,
      "y": 0,
    },
    Object {
      "x": 1627974390000,
      "y": 12,
    },
    Object {
      "x": 1627974400000,
      "y": 0,
    },
    Object {
      "x": 1627974410000,
      "y": 6,
    },
    Object {
      "x": 1627974420000,
      "y": 0,
    },
    Object {
      "x": 1627974430000,
      "y": 6,
    },
    Object {
      "x": 1627974440000,
      "y": 0,
    },
    Object {
      "x": 1627974450000,
      "y": 42,
    },
    Object {
      "x": 1627974460000,
      "y": 6,
    },
    Object {
      "x": 1627974470000,
      "y": 0,
    },
    Object {
      "x": 1627974480000,
      "y": 12,
    },
    Object {
      "x": 1627974490000,
      "y": 12,
    },
    Object {
      "x": 1627974500000,
      "y": 0,
    },
    Object {
      "x": 1627974510000,
      "y": 0,
    },
    Object {
      "x": 1627974520000,
      "y": 0,
    },
    Object {
      "x": 1627974530000,
      "y": 6,
    },
    Object {
      "x": 1627974540000,
      "y": 0,
    },
    Object {
      "x": 1627974550000,
      "y": 6,
    },
    Object {
      "x": 1627974560000,
      "y": 0,
    },
    Object {
      "x": 1627974570000,
      "y": 6,
    },
    Object {
      "x": 1627974580000,
      "y": 0,
    },
    Object {
      "x": 1627974590000,
      "y": 6,
    },
    Object {
      "x": 1627974600000,
      "y": 12,
    },
    Object {
      "x": 1627974610000,
      "y": 12,
    },
    Object {
      "x": 1627974620000,
      "y": 0,
    },
    Object {
      "x": 1627974630000,
      "y": 0,
    },
    Object {
      "x": 1627974640000,
      "y": 6,
    },
    Object {
      "x": 1627974650000,
      "y": 12,
    },
    Object {
      "x": 1627974660000,
      "y": 12,
    },
    Object {
      "x": 1627974670000,
      "y": 12,
    },
    Object {
      "x": 1627974680000,
      "y": 12,
    },
    Object {
      "x": 1627974690000,
      "y": 6,
    },
    Object {
      "x": 1627974700000,
      "y": 6,
    },
    Object {
      "x": 1627974710000,
      "y": 12,
    },
    Object {
      "x": 1627974720000,
      "y": 24,
    },
    Object {
      "x": 1627974730000,
      "y": 0,
    },
    Object {
      "x": 1627974740000,
      "y": 6,
    },
    Object {
      "x": 1627974750000,
      "y": 6,
    },
    Object {
      "x": 1627974760000,
      "y": 6,
    },
    Object {
      "x": 1627974770000,
      "y": 6,
    },
    Object {
      "x": 1627974780000,
      "y": 6,
    },
    Object {
      "x": 1627974790000,
      "y": 30,
    },
    Object {
      "x": 1627974800000,
      "y": 12,
    },
    Object {
      "x": 1627974810000,
      "y": 24,
    },
    Object {
      "x": 1627974820000,
      "y": 6,
    },
    Object {
      "x": 1627974830000,
      "y": 0,
    },
    Object {
      "x": 1627974840000,
      "y": 6,
    },
    Object {
      "x": 1627974850000,
      "y": 12,
    },
    Object {
      "x": 1627974860000,
      "y": 0,
    },
    Object {
      "x": 1627974870000,
      "y": 12,
    },
    Object {
      "x": 1627974880000,
      "y": 0,
    },
    Object {
      "x": 1627974890000,
      "y": 24,
    },
    Object {
      "x": 1627974900000,
      "y": 12,
    },
    Object {
      "x": 1627974910000,
      "y": 24,
    },
    Object {
      "x": 1627974920000,
      "y": 12,
    },
    Object {
      "x": 1627974930000,
      "y": 6,
    },
    Object {
      "x": 1627974940000,
      "y": 30,
    },
    Object {
      "x": 1627974950000,
      "y": 12,
    },
    Object {
      "x": 1627974960000,
      "y": 18,
    },
    Object {
      "x": 1627974970000,
      "y": 6,
    },
    Object {
      "x": 1627974980000,
      "y": 0,
    },
    Object {
      "x": 1627974990000,
      "y": 6,
    },
    Object {
      "x": 1627975000000,
      "y": 6,
    },
    Object {
      "x": 1627975010000,
      "y": 0,
    },
    Object {
      "x": 1627975020000,
      "y": 18,
    },
    Object {
      "x": 1627975030000,
      "y": 18,
    },
    Object {
      "x": 1627975040000,
      "y": 12,
    },
    Object {
      "x": 1627975050000,
      "y": 6,
    },
    Object {
      "x": 1627975060000,
      "y": 6,
    },
    Object {
      "x": 1627975070000,
      "y": 0,
    },
    Object {
      "x": 1627975080000,
      "y": 24,
    },
    Object {
      "x": 1627975090000,
      "y": 6,
    },
    Object {
      "x": 1627975100000,
      "y": 12,
    },
    Object {
      "x": 1627975110000,
      "y": 6,
    },
    Object {
      "x": 1627975120000,
      "y": 6,
    },
    Object {
      "x": 1627975130000,
      "y": 18,
    },
    Object {
      "x": 1627975140000,
      "y": 18,
    },
    Object {
      "x": 1627975150000,
      "y": 24,
    },
    Object {
      "x": 1627975160000,
      "y": 0,
    },
    Object {
      "x": 1627975170000,
      "y": 0,
    },
    Object {
      "x": 1627975180000,
      "y": 12,
    },
    Object {
      "x": 1627975190000,
      "y": 6,
    },
    Object {
      "x": 1627975200000,
      "y": 30,
    },
    Object {
      "x": 1627975210000,
      "y": 0,
    },
  ],
}
`;
